Cinnamon: [Scrollbar] Fix incorrect trough/slider colours

--- a/cinnamon-nokto/cinnamon.css
+++ b/cinnamon-nokto/cinnamon.css
@@ -174,13 +174,13 @@ StScrollBar {
   StScrollBar StBin#trough {
     margin: 0;
     border-radius: 0;
-    background-color: rgba(236, 239, 241, 0.15); }
+    background-color: #455A64; }
   StScrollBar StButton#vhandle, StScrollBar StButton#hhandle {
     margin: 0;
     border-radius: 0;
-    background-color: rgba(236, 239, 241, 0.6); }
+    background-color: rgba(236, 239, 241, 0.28); }
     StScrollBar StButton#vhandle:hover, StScrollBar StButton#hhandle:hover {
-      background-color: rgba(236, 239, 241, 0.8); }
+      background-color: rgba(236, 239, 241, 0.41); }
     StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
       background-color: #eceff1; }
 
