--- a/cinnamon/_common.scss
+++ b/cinnamon/_common.scss
@@ -135,16 +135,16 @@ StScrollBar {
   StBin#trough {
     margin: 0;
     border-radius: 0;
-    background-color: $fill_color;
+    background-color: $base_color;
   }
 
   StButton#vhandle, StButton#hhandle {
     margin: 0;
     border-radius: 0;
-    background-color: scale-color($fg_color, $alpha: -40%);
+    background-color: scale-color($fg_color, $alpha: -72%);
     // would be nice to margin or at least to transparent
     // border: 4px solid transparent;
-    &:hover { background-color: scale-color($fg_color, $alpha: -20%); }
+    &:hover { background-color: scale-color($fg_color, $alpha: -59%); }
     &:active { background-color: scale-color($fg_color, $alpha: -0%); }
   }
 }
