--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -175,13 +175,13 @@ StScrollBar {
   StScrollBar StBin#trough {
     margin: 0;
     border-radius: 0;
-    background-color: rgba(38, 50, 56, 0.15); }
+    background-color: #FFFFFF; }
   StScrollBar StButton#vhandle, StScrollBar StButton#hhandle {
     margin: 0;
     border-radius: 0;
-    background-color: rgba(38, 50, 56, 0.6); }
+    background-color: rgba(38, 50, 56, 0.28); }
     StScrollBar StButton#vhandle:hover, StScrollBar StButton#hhandle:hover {
-      background-color: rgba(38, 50, 56, 0.8); }
+      background-color: rgba(38, 50, 56, 0.41); }
     StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
       background-color: #263238; }
 
